# HW_WEB14

./: .coverage  .env  1.env  Dockerfile  README.md  docker-compose-redis-postgres.yml  docker-compose.yml  main.py  main_email.py  pyproject.toml
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: a7f06ded153e_adduser_confirmed.py  d199e0c02d10_init.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/repository/: auth.py  contacts.py  notes.py  tags.py  users.py
src/routes/: auth.py  contacts.py  notes.py  tags.py  users.py
src/services/: auth.py  cloud_image.py  e_mail.py  roles.py  security.py
templates/: example_email.html  home.html  login.html  register.html
tests/: test_config.py  test_reposetory_auth.py  test_unit_main.py  test_unit_repository_auth.py  test_unit_repository_contacts.py  test_unit_repository_notes.py  test_unit_repository_users.py  test_unit_routes_contacts.py
